yt-videos/kind-cert-manager/manifest/app_n_ingress.yaml
# main app 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-app
  template:
    metadata:
      labels:
        app: blog-app
    spec:
      containers:
        - name: blog-app
          image: devopsavenue/blog-app-nv:v1
          imagePullPolicy: Always
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          ports:
          - containerPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: blog-app-svc
spec:
  type: NodePort
  selector:
    app: blog-app
  ports:
    - port: 80
      targetPort: 5001
      nodePort: 30011
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: blog-app-ingress
spec:
  ingressClassName: nginx
  # tls:
  # - secretName: da-ss-secret
  #   hosts:
  #     - blog2.gurlal.com
  rules:
    - host: blog2.gurlal.com # Provide hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "blog-app-svc"
                port:
                  number: 80
